# yearn-news

./: .gitignore  AGENTS.md  README.md  pyproject.toml
.claude/: CLAUDE.md  instructions.md
.github/workflows/: ci.yml
data/: tvl_cache.json
docs/: tweet-alpha-workflow.md  weekly-generation-workflow.md
runs/: 2026-04-28-week-17-output-fragment.html  2026-04-28-week-17-output.html  2026-04-28-week-17-output.md  codex-image-last-message.txt
src/: content.py  generate.py  preflight.py  tvl.py  utils.py  vaults.py
tests/: test_preflight.py  test_vaults.py
