[project]
name = "yearn-news"
version = "0.1.0"
description = "The weekly Blue Pill!"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ruff==0.11.5",
    "mypy==1.15.0",
    "python-dotenv==1.2.1",
    "web3==7.14.0",
]

[tool.ruff]
line-length = 120
target-version = "py312"
lint.select = ["E", "F", "I", "W"]  # pycodestyle, pyflakes, isort, and warnings
fix = true
exclude = ["__pypackages__"]
lint.ignore = ['E501']

[tool.ruff.format]
quote-style = "double"
docstring-code-format = true

[tool.mypy]
mypy_path = "src"
python_version = "3.12"
ignore_missing_imports = true
strict = true
check_untyped_defs = true
disallow_untyped_defs = true
warn_unused_ignores = true
disable_error_code = ["misc"]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
